Updated bounce animations to prevent black key clipping

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,8 @@
 @import "./styles/style.scss";
 
 body{
-    height: 95vh;
+    height: 100vh;
+    margin: 0;
     background-color: $dark-gray;
     display: flex;
     justify-content: center;
@@ -26,14 +27,29 @@ body{
 .game {
     width: 100%;
     display: none;
+    flex-direction: column;
 }
 
 #main {
     position: relative;
     width: 100%;
+    height: 95vh;
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+// #main-menu {
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+// }
+
+.volume-slider{
+    margin: 100 auto;
+    width: 100px;
+    z-index: 4;
+    transform: translateY(15px);
 }
 
 .piano-svg {
@@ -110,6 +126,7 @@ body{
 
 .black-key {
     font-size: 12px;
+    height: 100px;
     width: 60%;
     background-color: black;
     border-radius: 0 0 3px 3px;
@@ -126,6 +143,59 @@ body{
 .invalid-key-down {
     background-color: $invalid-red;
 }
+
+.bounce1 {
+    animation: bounce1 0.2s;
+}
+
+.bounce2 {
+    animation: bounce2 0.2s;
+}
+
+// .stay1 {
+//     animation: stay1 0.2s;
+// }
+
+// .stay2 {
+//     animation: stay2 0.2s;
+// }
+
+@keyframes bounce1 {
+    50% {
+        height: 95px;
+    }
+    100%{
+        height: 100px;
+    }
+}
+
+@keyframes bounce2 {
+    50% {
+        height: 95px;
+    }
+    100%{
+        height: 100px;
+    }
+}
+
+// @keyframes stay1 {
+    //     50% {
+        //         height: 105%;
+        //     }
+        //     100%{
+            //         height: 100%;
+//     }
+// }
+
+// @keyframes stay2 {
+//     50% {
+//         height: 95px;
+//     }
+//     100%{
+//         height: 95px;
+//     }
+// }
+
 
 .hidden {
     display: none;
